2004-06-01  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtktoolbutton.c, rbgtktoolitem.c, rbgtktoggletoolbutton.c,
	rbgtkseperatortoolitem.c: Added for GTK+-2.4. 

2004-05-31  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkfilechooser.c: Fix definitions of Gtk::FileChooser::Action. 
	* sample/misc/filechooser.rb: ditto.
	* sample/misc/combobox.rb, expander.rb, color_font_button.rb: Added for GTK+-2.4.
	* src/rbgtkcombobox.c, rbgtkcomboboxentry.c, rbgtkexpander.c, rbgtkcolorbutton.c,
	rbgtkfontbutton.c, rbgtkfilechooserwidget.c, rbgtkaction.c, rbgtktoggleaction.c,
	rbgtkradioaction.c: Added for GTK+-2.4.
	* src/rbgtkoptionmenu.c, rbgtkcombo.c: Deprecated(GTK_DISABLE_DEPRECATED).

2004-05-29  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkcelllayout.c: Added for GTK+-2.4. 
	* src/rbgdkdevice.c, rbgdkinput.c: Move Gdk::Input.set_extension_events to 
	Gdk::Device. 
	* src/rbgtkcontainer.c: Gtk::Container#set_focus_(h|v)adjustment accept nil. 
	* src/rbgdkselection.c: Fix a memory leak.

2004-05-26  Kazuhiro NISHIYAMA <zn@mbf.nifty.com>

	* src/rbgtkentry.c: Fix compilation error of Gtk::Entry.c 

2004-05-25  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkstock.c: Fix compilation error of GTK_STOCK_HARDDISK/NETWORK.
	Reported by John Platte.
	* src/rbgtkmessagedialog.c: Added Gtk::MessageDialog#set_markup for GTK+-2.4. 
	* src/rbgtkbutton.c: Added Gtk::Button#set_alignment, #alignment for GTK+-2.4.
	* src/rbgtkborder.c: Added.
	* sample/misc/entry.rb, settings.rb: Modified.
	* sample/misc/entrycompletion.rb: Added.
	* src/rbgtkentrycompletion.c: Added.
	* src/rbgtkentry.c: Added Gtk::Entry#set_completion, #completion. 

2004-05-24  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkclipboard.c: Added Gtk::Clipboard#request_targets, 
	#wait_for_targets for GTK+-2.4.
	* src/rbgtkdrag.c: Add Gtk::Drag.source_(set|get)_target_list for GTK+-2.4.

2004-05-23  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkfilechooser.c: Add Gtk::FileChooserNotExistentError, 